fix: detect ancestor overflow and show property value ellipsis

--- a/frontend/src/app/modules/analytics/compare-policy/compare-policy.component.scss
+++ b/frontend/src/app/modules/analytics/compare-policy/compare-policy.component.scss
@@ -502,7 +502,9 @@
 }
 
 .prop-table-row {
-    display: table-row;
+    display: table;
+    width: 100%;
+    table-layout: fixed;
 }
 
 .prop-table-name {
@@ -514,6 +516,7 @@
     padding-bottom: 2px;
     box-sizing: border-box;
     min-width: 175px;
+    width: 175px;
     height: 30px;
 }
 
@@ -545,7 +548,7 @@
 
 .prop-table-value span {
     display: inline-block;
-    width: min(max-content, 100%);
+    width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
